# basket_pricer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/basket_pricer/: __init__.py
src/basket_pricer/models/: __init__.py  basket.py  basket_item.py  catalogue.py  money.py  product.py
src/basket_pricer/offers/: __init__.py  abc_offer.py  base_offer.py  buy_x_get_cheapest_free_offer.py  buy_x_get_y_free.py  offer_resolver.py  offers_factory.py  percentage_discount.py
src/basket_pricer/pricer/: __init__.py  basket_pricer.py  offer_summary.py  price_summary.py
src/basket_pricer/utils/: amount.py  exceptions.py  logger.py
tests/: conftest.py
tests/integration/: test_basket_pricer.py
tests/unit/: test_catalogue.py  test_models.py  test_money.py  test_offers.py
