
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basket-pricer"
version = "0.1.0"
description = "Basket pricing engine"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "pre-commit"
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv", "build", "dist"]

[tool.pylint.main]
py-version ="3.11"
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]
good-names = ["i", "j", "k", "ex", "id", "_"]

[tool.pylint.design]
max-attributes = 10
max-args = 7

[tool.pylint.format]
max-line-length = 100

[tool.flake8]
max-line-length =100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist"
]
