
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basket_pricer"
version = "0.1.0"
description = "Basket pricing engine"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv", "build", "dist", "env"]

[tool.flake8]
max-line-length =100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "env",
    ".venv",
    "build",
    "dist"
]
